# rs520-knob

./: .gitignore  AGENTS.md  README.md  rs520-knob.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bridge.yml  idf-build.yml  release.yml
bridge/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
bridge/cmd/bridge/: main.go
bridge/internal/artwork/: proxy.go  proxy_test.go
bridge/internal/notify/: listener.go  listener_test.go
bridge/internal/rs520/: client.go  client_test.go  types.go
bridge/scripts/: curl_integration_test.sh
docs/dev/: CODE_STYLE.md  DEVELOPMENT.md  HARDWARE.md  RS520_FULL_API_REF.md
docs/esp/: BATTERY_MONITORING.md  DISPLAY.md  DUAL_CHIP_ARCHITECTURE.md  FONTS.md  NETWORK_IDENTITY.md  ROTARY_ENCODER.md  SWIPE_GESTURES.md  TOUCH_INPUT.md
docs/lvgl/: LVGL_GUIDELINES.md
docs/meta/: LESSONS_LEARNED.md  PROJECT_AIMS.md  ROADMAP_IDEAS.md
idf_app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
idf_app/main/: CMakeLists.txt  artwork_ui.cpp  artwork_ui.h  backlight.cpp  backlight.h  battery.cpp  battery.h  battery_ui.cpp  battery_ui.h  bridge_discovery.cpp  bridge_discovery.h  connection_ui.cpp  connection_ui.h  display_driver.cpp  display_driver.h  encoder.cpp  encoder.h  haptic.cpp  haptic.h  idf_component.yml  main.cpp  metadata_ui.cpp  metadata_ui.h  progress_ui.cpp  progress_ui.h  status_bar.cpp  status_bar.h  touch_driver.cpp  touch_driver.h  transport_ui.cpp  transport_ui.h  wifi_manager.cpp  wifi_manager.h  wifi_provision.cpp  wifi_provision.h  wifi_status_ui.cpp  wifi_status_ui.h
(+21 files in other folders)
